--- a/.github/workflows/build-papers.yml
+++ b/.github/workflows/build-papers.yml
@@ -16,6 +16,9 @@ on:
       - 'Makefile'
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build-pdfs:
     runs-on: ubuntu-latest
@@ -23,33 +26,38 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build PDFs with LaTeX
+      - name: Install LaTeX
         run: |
-          docker run --rm \
-            -v "$PWD:/workdir" \
-            -w /workdir \
-            texlive/texlive:latest \
-            make all
+          sudo apt-get update
+          sudo apt-get install -y texlive-full
 
-      - name: Check PDFs were generated
-        run: |
-          ls -lh *.pdf
+      - name: Compile all papers
+        run: make all
+
+      - name: List generated PDFs
+        run: ls -lh pdfs/*.pdf 2>/dev/null || echo "No PDFs generated"
 
       - name: Upload PDFs as artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: papers-pdf
-          path: '*.pdf'
+          name: hanzo-papers
+          path: pdfs/*.pdf
           retention-days: 90
 
-      - name: Create Release on Tag
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: '*.pdf'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit PDFs back to repository
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+
+          git add pdfs/*.pdf 2>/dev/null || true
+
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Auto-generated PDFs from LaTeX sources [skip ci]"
+            git push
+          fi
